--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@
 title: Blog redes neuronales
 email: a215215573@alumnos.unison.mx
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Blog para hablar de mis experiencias haciendo redes neuronales.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "bitbucket.org/sanlf/blog" # the base hostname & protocol for your site
 github_username:  sanlf
@@ -19,3 +17,5 @@ bitbucket_username: sanlf
 
 # Build settings
 markdown: kramdown
+
+theme: jekyll-theme-tactile
